--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.url=jdbc:h2:file:./target/h2db/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 
 
-#自动建表
+#自动建表,所以不需要schema.sql
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
 spring.jpa.show-sql=true
 
 #server.port=8080
