添加日志相关的配置 完成整个demo
注意重新运行时会重新插入数据，所以重新运行时要注意把生成的db文件删除

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,16 @@ spring.jpa.show-sql=true
 
 #server.port=8080
 
+#可以在控制台看到INFO级别（更详细？）的报错信息
 logging.level.org.springframework.security=INFO
+
+
+##配置这个可以看到spring mvc中经常出现的参数类型相关的4xx错误，debug将让我们看到更详细的信息
+#logging.level.org.springframework.web=DEBUG
+
+
+#springboot已为当前使用的日志框架配置了控制台输出，并且只要设置这个file路径即可配置好文件输出
+logging.file=./target/myLog/security_log.log
 
 spring.thymeleaf.cache=false
 
